--- a/build-step-npm/action.yml
+++ b/build-step-npm/action.yml
@@ -63,11 +63,11 @@ runs:
       shell: bash
       run: |
         cd ${{ inputs.module_path }}
-        if [ ! -e ${{ inputs.module_path }}${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz ]; then
-          mv ${{ inputs.module_path }}${{ env.MODULE_NAME }}-v${{ env.MODULE_OLD_VERSION }}.tgz ${{ inputs.module_path }}${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz
+        if [ ! -e ${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz ]; then
+          mv ${{ env.MODULE_NAME }}-v${{ env.MODULE_OLD_VERSION }}.tgz ${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz
         fi
         mkdir target
-        mv ${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz target/${{ inputs.module_path }}${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz
+        mv ${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz target/${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz
 
     - name: Archive build artifacts
       if: ${{ inputs.archive_artifacts == 'true' }}
