--- a/publish-npm/action.yml
+++ b/publish-npm/action.yml
@@ -39,7 +39,7 @@ runs:
         echo "GROUP_ID=$(jq '.jahia.maven.groupId' package.json | cut -d\" -f2)" >> $GITHUB_ENV
 
     - name: Build package
-      uses: jahia/jahia-modules-action/build-step-npm@npm-test-module
+      uses: jahia/jahia-modules-action/build-step-npm@v2
       with:
         module_path: ${{ inputs.module_path }}
         node-version: ${{ inputs.node_version }}
@@ -60,7 +60,7 @@ runs:
 
     - name: Build tests package
       if: ${{ steps.check_test_module_npm.outputs.files_exists == 'true' }}
-      uses: jahia/jahia-modules-action/build-step-npm@npm-test-module
+      uses: jahia/jahia-modules-action/build-step-npm@v2
       with:
         module_path: ${{ inputs.tests_module_path }}
         node-version: ${{ inputs.node_version }}
