--- a/publish-npm/action.yml
+++ b/publish-npm/action.yml
@@ -56,13 +56,13 @@ runs:
       id: check_test_module_npm
       uses: andstor/file-existence-action@v2
       with:
-        files: "${{ inputs.tests_module_path }}package.json"
+        files: "${{ inputs.module_path }}${{ inputs.tests_module_path }}package.json"
 
     - name: Build tests package
       if: ${{ steps.check_test_module_npm.outputs.files_exists == 'true' }}
       uses: jahia/jahia-modules-action/build-step-npm@v2
       with:
-        module_path: ${{ inputs.tests_module_path }}
+        module_path: ${{ inputs.module_path }}${{ inputs.tests_module_path }}
         node-version: ${{ inputs.node_version }}
         github_artifact_retention: ${{ inputs.github_artifact_retention }}
 
@@ -71,4 +71,4 @@ runs:
       shell: bash
       run: |
         # Run mvn deploy with parameters got from the package.json
-        mvn -s ${{ inputs.mvn_settings_filepath }} deploy:deploy-file -Dfile=${{ inputs.tests_module_path }}/target/${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz -DgroupId=${{ env.GROUP_ID }} -DartifactId=${{ env.MODULE_NAME }} -Dversion=${{ env.MODULE_VERSION }} -Dpackaging=tgz -Durl=${{ env.REPOSITORY_URL }} -DrepositoryId=${{ env.REPOSITORY_ID }}
+        mvn -s ${{ inputs.mvn_settings_filepath }} deploy:deploy-file -Dfile=${{ inputs.module_path }}${{ inputs.tests_module_path }}/target/${{ env.MODULE_NAME }}-v${{ env.MODULE_VERSION }}.tgz -DgroupId=${{ env.GROUP_ID }} -DartifactId=${{ env.MODULE_NAME }} -Dversion=${{ env.MODULE_VERSION }} -Dpackaging=tgz -Durl=${{ env.REPOSITORY_URL }} -DrepositoryId=${{ env.REPOSITORY_ID }}
