--- a/static-analysis/action.yml
+++ b/static-analysis/action.yml
@@ -54,6 +54,7 @@ runs:
         echo "::group::Run yarn if package.json exists in module folder: ${{ inputs.module_path }}"
         if [[ -d "${{ inputs.module_path }}" && -e "${{ inputs.module_path }}package.json" ]]; then
           cd ${{ inputs.module_path }}
+          yarn set version stable
           yarn
         fi
         echo "::endgroup::"
@@ -63,6 +64,7 @@ runs:
         echo "::group::Run yarn if package.json exists in tests folder: ${{ inputs.tests_path }}"
         if [[ -d "${{ inputs.tests_path }}" && -e "${{ inputs.tests_path }}package.json" ]]; then
           cd ${{ inputs.tests_path }}
+          yarn set version stable
           yarn
         fi
         echo "::endgroup::"
