Revert "Simply cache usage"
This reverts commit f89f2c46205006b9128181ba0635c7b598f91885.

--- a/publish/action.yml
+++ b/publish/action.yml
@@ -48,11 +48,17 @@ runs:
         restore-keys: |
           ${{ runner.os }}-maven-
 
-    - name: Get cache build data
+    - name: Get mvn cache build data
       uses: actions/cache/restore@v3
       with:
         path: ${{ inputs.module_path }}
-        key: cache-build-{{ md5sum pom.xml }}
+        key: cache-build-mvn-{{ md5sum pom.xml }}
+
+    - name: Get npm cache build data
+      uses: actions/cache/restore@v3
+      with:
+        path: ${{ inputs.module_path }}
+        key: cache-build-npm-{{ md5sum package.json }}
 
     - name: Build package
       shell: bash
