--- a/code-signer/action.yml
+++ b/code-signer/action.yml
@@ -78,10 +78,11 @@ runs:
         # sign installer jars
         for INSTALLER_FILE in `find ${{ inputs.installer_dir }} -name "${{ inputs.file_pattern }}" \( -name "*.jar" \)`; do
           echo "Signing $INSTALLER_FILE..."
-          printf `oathtool --totp -b -d 6 ${{ inputs.totp_secret }}` | ./CodeSignTool.sh sign \
+          ./CodeSignTool.sh sign \
             -username="${{ inputs.signer_username }}" \
             -password='${{ inputs.signer_password }}' \
             -credential_id="${{ inputs.credential_id }}" \
+            -totp_secret="${{ inputs.totp_secret }}" \
             -output_dir_path="$OUTPUT_DIR" \
             -input_file_path="$INSTALLER_FILE"
           cp $OUTPUT_DIR/`basename $INSTALLER_FILE` $INSTALLER_FILE # overwrite original file
@@ -93,6 +94,7 @@ runs:
             -username="${{ inputs.signer_username }}" \
             -password='${{ inputs.signer_password }}' \
             -credential_id="${{ inputs.credential_id }}" \
+            -totp_secret="${{ inputs.totp_secret }}" \
             -output_dir_path="$OUTPUT_DIR" \
             $INSTALLER_FILE # -input_file_path option is replaced by last param
           cp $OUTPUT_DIR/`basename $INSTALLER_FILE` $INSTALLER_FILE # overwrite original file
