Update release action to include test module

--- a/release/action.yml
+++ b/release/action.yml
@@ -16,6 +16,14 @@ inputs:
   nexus_password:
     description: 'Nexus Password'
     required: true
+  tests_module_path:
+    description: 'Path to a folder in the repository containing a tests module to be built (Both NPM and MVN test module supported)'
+    required: false
+    default: 'tests/jahia-module/'
+  tests_module_type:
+    description: 'Type of module for the tests module (mvn,npm)'
+    required: false
+    default: 'mvn'    
   github_slug:
     description: 'GitHub SLUG of the module (for example: jahia/sandbox)'
     required: true
@@ -97,6 +105,13 @@ runs:
         echo "---"
         git show --summary
 
+    - name: Check if test module is present (MVN)
+      if: ${{ inputs.tests_module_type == 'mvn' }}
+      id: check_test_module_mvn
+      uses: andstor/file-existence-action@v2
+      with:
+        files: "${{ inputs.tests_module_path }}pom.xml"
+
     - name: Release prepare version for ${{ inputs.release_version }}
       shell: bash
       run: |
@@ -113,6 +128,11 @@ runs:
           NEXT_DEVELOPMENT_VERSION="$MAJOR_VERSION.$MINOR_VERSION.$NEXT_REVISION"-SNAPSHOT
         fi
         mvn -B -s ${{ inputs.mvn_settings_filepath }} -B -Dtag=$TAG_VERSION release:prepare -DreleaseVersion=$FINAL_RELEASE_VERSION -DdevelopmentVersion="$NEXT_DEVELOPMENT_VERSION" -DscmCommentPrefix="[skip ci] [maven-release-plugin]"
+        echo "Release prepare for test module"
+        if [[ "${{ inputs.tests_module_type }}" == "mvn"  &&  "${{ steps.check_test_module_mvn.outputs.files_exists }}" == "true" ]]; then
+          cd ${{ inputs.tests_module_path }}
+          mvn -B -s ${{ inputs.mvn_settings_filepath }} -B -Dtag=$TAG_VERSION release:prepare -DreleaseVersion=$FINAL_RELEASE_VERSION -DdevelopmentVersion="$NEXT_DEVELOPMENT_VERSION" -DscmCommentPrefix="[skip ci] [maven-release-plugin] [Tests module]"
+        fi
 
     - name: Cache local Maven repository
       uses: actions/cache@v3
@@ -138,7 +158,13 @@ runs:
 
     - name: Perform release
       shell: bash
-      run: mvn -B -s ${{ inputs.mvn_settings_filepath }} release:perform -Prelease-to-staging-repository
+      run: | 
+        mvn -B -s ${{ inputs.mvn_settings_filepath }} release:perform -Prelease-to-staging-repository
+        echo "Perform release for test module"
+        if [[ "${{ inputs.tests_module_type }}" == "mvn"  &&  "${{ steps.check_test_module_mvn.outputs.files_exists }}" == "true" ]]; then
+          cd ${{ inputs.tests_module_path }}
+          mvn -B -s ${{ inputs.mvn_settings_filepath }} -B -Dtag=$TAG_VERSION release:prepare -DreleaseVersion=$FINAL_RELEASE_VERSION -DdevelopmentVersion="$NEXT_DEVELOPMENT_VERSION" -DscmCommentPrefix="[skip ci] [maven-release-plugin] [Tests module]"
+        fi
 
     - name: Copy artifacts
       shell: bash
