--- a/dependencies-get-unused-java/action.yml
+++ b/dependencies-get-unused-java/action.yml
@@ -33,7 +33,7 @@ runs:
       if: always()
       uses: rknj/html2markdown@v1.1.0
       with:
-        html-file: "${{ inputs.root_folder }}/target/dependency-analysis.html"
+        html-file: "${{ inputs.root_folder }}/target/site/dependency-analysis.html"
 
     - name: Clean up markdown
       if: always()
@@ -41,9 +41,9 @@ runs:
       run: |
         echo "TODAY=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
         grep -Eiv "^.*Dependencies Report|.*Last Published|.*Built by Maven|.*©|.*\* \* \*" ${{ steps.html2markdown.outputs.markdown-file }} > maven-report-updated.md || true
-        sed -i -r 's/### Used and declared dependencies/### Used and declared dependencies\n\<details\>\<summary\>Show the list\<\/summary>\n\<p\>/g' maven-report-updated.md
-        sed -i -r 's/### Used but undeclared dependencies/\<\/p\>\n\<\/details\>\n\n### Used but undeclared dependencies\n\<details\>\<summary\>Show the list\<\/summary\>\n\<p\>/g' maven-report-updated.md
-        sed -i -r 's/### Unused but declared dependencies/\<\/p\>\n\<\/details\>\n\n### Unused but declared dependencies/g' maven-report-updated.md
+        sed -i -r 's/### Used and Declared Dependencies/### Used and Declared Dependencies\n\<details\>\<summary\>Show the list\<\/summary>\n\<p\>/g' maven-report-updated.md
+        sed -i -r 's/### Used but Undeclared Dependencies/\<\/p\>\n\<\/details\>\n\n### Used but Undeclared Dependencies\n\<details\>\<summary\>Show the list\<\/summary\>\n\<p\>/g' maven-report-updated.md
+        sed -i -r 's/### Unused but Declared Dependencies/\<\/p\>\n\<\/details\>\n\n### Unused but Declared Dependencies/g' maven-report-updated.md
         echo 'MARKDOWN_UNUSED<<EOF' >> $GITHUB_ENV
         cat maven-report-updated.md >> $GITHUB_ENV
         echo 'EOF' >> $GITHUB_ENV
