Fixed a typo in the input name

--- a/build-npm/action.yml
+++ b/build-npm/action.yml
@@ -25,7 +25,7 @@ runs:
       uses: jahia/jahia-modules-action/build-step-npm@v2
       with:
         module_path: ${{ inputs.module_path }}
-        node-version: ${{ inputs.node_version }}
+        node_version: ${{ inputs.node_version }}
         github_artifact_retention: ${{ inputs.github_artifact_retention }}
 
     - name: Check if test module is present (Only NPM test module is supported)
@@ -39,7 +39,7 @@ runs:
       uses: jahia/jahia-modules-action/build-step-npm@v2
       with:
         module_path: ${{ inputs.tests_module_path }}
-        node-version: ${{ inputs.node_version }}
+        node_version: ${{ inputs.node_version }}
         github_artifact_retention: ${{ inputs.github_artifact_retention }}
 
     - name: Keep session opened if /tmp/debug file is present
