--- a/publish/action.yml
+++ b/publish/action.yml
@@ -84,5 +84,5 @@ runs:
         nexus_username: ${{ inputs.nexus_username }}
         nexus_password: ${{ inputs.nexus_password }}
         module_path: ${{ inputs.tests_module_path }}
-        node-version: ${{ inputs.node_version }}
+        node_version: ${{ inputs.node_version }}
         github_artifact_retention: ${{ inputs.github_artifact_retention }}
