--- a/publish-npm/action.yml
+++ b/publish-npm/action.yml
@@ -42,7 +42,7 @@ runs:
       uses: jahia/jahia-modules-action/build-step-npm@v2
       with:
         module_path: ${{ inputs.module_path }}
-        node-version: ${{ inputs.node_version }}
+        node_version: ${{ inputs.node_version }}
         archive_artifacts: 'false'
         github_artifact_retention: ${{ inputs.github_artifact_retention }}
 
@@ -63,7 +63,7 @@ runs:
       uses: jahia/jahia-modules-action/build-step-npm@v2
       with:
         module_path: ${{ inputs.module_path }}${{ inputs.tests_module_path }}
-        node-version: ${{ inputs.node_version }}
+        node_version: ${{ inputs.node_version }}
         github_artifact_retention: ${{ inputs.github_artifact_retention }}
 
     - name: Publish tests package to maven
