--- a/build-step-npm/action.yml
+++ b/build-step-npm/action.yml
@@ -30,7 +30,10 @@ runs:
       run: |
         # Get informations from package.json to replace the ones that are in pom.xml in classic modules
         cd ${{ inputs.module_path }}
-        echo "MODULE_NAME=$(jq '.name' package.json | cut -d\" -f2 )" >> $GITHUB_ENV
+        MODULE_NAME=$(jq '.name' package.json | cut -d\" -f2 )
+        MODULE_NAME="${MODULE_NAME//@}"
+        MODULE_NAME="${MODULE_NAME////-}"
+        echo "MODULE_NAME=$MODULE_NAME" >> $GITHUB_ENV
         MODULE_VERSION=$(jq '.version' package.json | cut -d\" -f2 )
         if [[ $MODULE_VERSION == *-SNAPSHOT ]]; then
           echo "MODULE_VERSION=$MODULE_VERSION" >> $GITHUB_ENV
