update build-step-npm to remove @borales/actions-yarn usage

--- a/build-step-npm/action.yml
+++ b/build-step-npm/action.yml
@@ -21,7 +21,7 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - uses: actions/setup-node@v3
+    - uses: actions/setup-node@v4
       with:
         node-version: ${{ inputs.node_version }}
 
@@ -45,22 +45,13 @@ runs:
         fi
 
     - name: Prepare the module
-      uses: borales/actions-yarn@v4
-      with:
-        cmd: install
-        dir: ${{ inputs.module_path }}
+      run: yarn install
 
     - name: Build the module
-      uses: borales/actions-yarn@v4
-      with:
-        cmd: build
-        dir: ${{ inputs.module_path }}
+      run: yarn build
 
     - name: Package the module
-      uses: borales/actions-yarn@v4
-      with:
-        cmd: jahia-pack
-        dir: ${{ inputs.module_path }}
+      run: yarn jahia-pack
 
     - name: Rename build file if necessary and move to /target
       shell: bash
