--- a/build-step-npm/action.yml
+++ b/build-step-npm/action.yml
@@ -47,6 +47,10 @@ runs:
           echo $MODULE_VERSION
           echo "MODULE_VERSION=$MODULE_VERSION" >> $GITHUB_ENV
         fi
+    
+    - name: Set yarn version
+      shell: bash
+      run: yarn set version stable
 
     - name: Prepare the module
       run: yarn install
