Fix missing shell

--- a/build-step-npm/action.yml
+++ b/build-step-npm/action.yml
@@ -45,6 +45,7 @@ runs:
         fi
     
     - name: Build Pack
+      shell: bash
       run: |
         corepack enable
         yarn set version stable
