--- a/build-step-npm/action.yml
+++ b/build-step-npm/action.yml
@@ -47,8 +47,8 @@ runs:
     - name: Build Pack
       shell: bash
       run: |
-        corepack enable
         yarn install
+        yarn set version stable
         yarn build
         yarn jahia-pack
 
