--- a/build-step-npm/action.yml
+++ b/build-step-npm/action.yml
@@ -49,7 +49,7 @@ runs:
       run: |
         corepack enable
         yarn set version stable
-        yarn install
+        yarn install --frozen-lockfile
         yarn build
         yarn jahia-pack
 
